<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright (C) 2012 Daniel Medina <http://danielme.com>
 * 
 * This file is part of "Android Dashboard UI Demoo".
 * 
 * "Android Dashboard UI Demo" is free software: you can redistribute it and/or modify
 * it under the terms of the GNU General Public License as published by
 * the Free Software Foundation, version 3.
 *
 * "Android Dashboard UI Demo" is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License version 3
 * along with this program.  If not, see <http://www.gnu.org/licenses/gpl-3.0.html/>
 */
 -->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="5dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/button1"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/icon1"
                    android:onClick="clicked"
                    android:text="@string/button1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/button2"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/icon2"
                    android:onClick="clicked"
                    android:text="@string/button2" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/button3"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/icon3"
                    android:onClick="clicked"
                    android:text="@string/button3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/button4"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/icon4"
                    android:onClick="clicked"
                    android:text="@string/button4" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal" android:baselineAligned="false">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/button5"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/icon5"
                    android:onClick="clicked"
                    android:text="@string/button5" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <Button
                    android:id="@+id/button6"
                    style="@style/dashboard_button_center"
                    android:drawableTop="@drawable/icon6"
                    android:onClick="clicked"
                    android:text="@string/button6" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>